Feature 🍫API to create user info
